# Balcony-Green

./: .arduino-cli.yaml  .dockerignore  .gitignore  CHANGELOG.md  GITHUB_INTEGRATION_NOTES.md  LICENSE  README.md  UPDATE.md  UPDATE_History.md  basilikum_sensor.csv  current_status.md  esp_basilikum.ipynb  flash_esp32.bat  pyproject.toml  reference_instrcution.txt  setup.sh  start.bat  start_only.bat  untitled0.py
.github/workflows/: main.yml
device_data/devices/: 04e1ed03-c4af-4c8b-bb5f-57a64158d8b1.json  099c4beb-234a-4f3a-a86a-d15d83ee40ce.json  240f0bad-c761-4da6-8fe9-cd58496d4eb3.json  254c8e10-8e3a-40e1-9292-797696fb96cd.json  2b613517-1e6d-41f2-aa2c-668cab7f4605.json  44033cf2-2555-4f03-8a43-bf2a25ed6c38.json  46238b16-6e5d-4ea6-8c0f-36b9f283a145.json  4af03636-20b2-426f-9daf-201c01076a07.json  576ee14b-5026-4f9b-bd8f-6aef114279fe.json  76e650da-ec71-459a-9ff1-2d3f777c37e1.json  8108382a-7e1f-45b5-aa40-59c94317c37c.json  b9d56a64-d8fc-43e9-895c-e65d862c943d.json  bb259cf8-5e17-4188-b6a0-1b2753a07be5.json  dbb55368-b828-411c-b055-0ff5f62489f8.json  e866adf0-9f56-4997-aea1-b0be414260db.json  ef8ba92a-eaf5-4fd7-9ff0-7bb44e3a91c6.json  f739f928-7e3d-4ae9-b949-433ff3b0059d.json  fa927125-8db1-4e8b-baa0-9de058e4a78d.json
disease-detection/: README.md
disease-detection/Tomatoes/Scripts/: train.py
examples/esp32_cam_leaf_detection/: esp32_cam_leaf_detection.ino
examples/esp32_water_now_demo/: README.md  esp32_water_now_demo.ino
images/: image_clean_up.py
run_logs/: basil_api_test_summary.json  tomato_api_test_summary.json
src/balconygreen/: Dockerfile  WEATHER_README.md  app.py  auth_api.py  auth_ui.py  camera_sensor.py  dashboard.py  docker-compose.dev.yml  docker-compose.yml  inference.py  location_service.py  optimal_factors.py  sensor_reading.py  settings.py  uninterrupted_sensor_reading.py  user_service.py  utils.py  watering_ai.py  weather_service.py
src/balconygreen/ESP_module/: .gitignore  platformio.ini
src/balconygreen/backend/: Dockerfile  api.py  register_device.py
src/balconygreen/db_implementation/: alembic.ini  db_general.py  schema.py
src/balconygreen/frontend/: Dockerfile  home_page.py  login_page.py
tests/: test_weather_integration.py
weather_cache/: aachen.json  london.json
(+36 files in other folders)
