[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "balconygreen"
version = "0.1.0"
description = "BalconyGreen platform"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "requests",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]


[project.optional-dependencies]

# ---------------- Frontend ----------------
frontend = [
    "streamlit",
    "streamlit-cookies-manager",
    "qrcode[pil]",
    "pillow",
]

# ---------------- Backend (FastAPI) ----------------
backend = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "databases",
    "httpx",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "psycopg2-binary",
    "argon2-cffi",
    "python-multipart",
    "timm",
    "joblib",
    "numpy<2",
    "scikit-learn==1.5.2",
    "pandas<2"
]

# ---------------- Machine Learning (CPU only) ----------------
ml = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    
]

# ---------------- Worker ----------------
worker = [
    "torch==2.1.0+cpu",
    "torchvision==0.16.0+cpu",
    "timm",
    "sqlalchemy",
    "python-dotenv",
]

# ---------------- Dev / CI ----------------
test = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "tox",
]


[project.urls]
Source = ""
Documentation = ""


# ---------------- Hatch build config ----------------
[tool.hatch.build.targets.wheel]
packages = ["src/balconygreen"]


# ---------------- Ruff ----------------
[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["SIM108", "SIM117"]


# ---------------- MyPy ----------------
[tool.mypy]
strict_optional = true
ignore_missing_imports = true


# ---------------- Pytest ----------------
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
asyncio_mode = "auto"
